<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_update_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/update_image"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_update_level"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/update_leve"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_query_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/query_image"
            android:textSize="16sp" />

    </LinearLayout>

    <com.dingqiqi.qijuproject.view.MoveView
        android:id="@+id/move_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="@mipmap/ic_default"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_game_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_count"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_start_game"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/activity_start_game"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_game_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_time"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
