<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_select_image_title"
        android:textColor="#3397E4"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_select_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center"
        android:paddingEnd="0dp"
        android:paddingLeft="24dp"
        android:paddingRight="0dp"
        android:paddingStart="24dp"
        android:text="@string/dialog_select_default"
        android:textColor="#404040"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_select_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center"
        android:paddingEnd="0dp"
        android:paddingLeft="24dp"
        android:paddingRight="0dp"
        android:paddingStart="24dp"
        android:text="@string/dialog_select_photo"
        android:textColor="#404040"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_select_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center"
        android:paddingEnd="0dp"
        android:paddingLeft="24dp"
        android:paddingRight="0dp"
        android:paddingStart="24dp"
        android:text="@string/dialog_select_image"
        android:textColor="#404040"
        android:textSize="14sp" />

</LinearLayout>